# dcopf-gat

./: .gitignore  README.md  pyproject.toml  requirements.txt
dcopf_gat/: data.py  data_eraa.py  data_pipeline.py  dcopf.py  graph.py  model.py  pypsa_export.py  runtime.py  train.py  utils.py  utils_results.py  windowing.py
dcopf_gat/architectures/: arch_a.py  arch_b.py  arch_c.py  arch_d.py  arch_e.py  arch_e_model.py  arch_f.py  arch_f_model.py  base.py  common.py  registry.py
scripts/: aggregate_benchmark_results.py  benchmark_temporal_arches.py  compare_architectures.py  evaluate_runs.py  export_eraa_dataset.py  generate_toy_dataset.py  inspect_eraa_dataset.py  inspect_eraa_graph_mapping.py  make_toy_ieee14.py  plot_scatter_flows.py  run_experiment.py  test_eraa_graph_loader.py  test_eraa_loader.py  test_run.py  train_eraa_arch_a.py  train_eraa_gru.py  train_eraa_mlp.py  visualize_network.py
tests/: test_toy_run.py
workflows/benchmark_arches/: Snakefile  config.yaml
